--- a/style/style.css
+++ b/style/style.css
@@ -123,13 +123,13 @@ h3 {
     align-items: center;
     margin-top: 50px;
     margin-right: 301px;
-margin-bottom: 24px;
+    margin-bottom: 24px;
 
 }
 
 .plan-title {
     margin-top: 24px;
-     font-weight: 700;
+    font-weight: 700;
     font-size: 30px;
     line-height: 35px;
     text-align: center;
@@ -144,3 +144,43 @@ margin-bottom: 24px;
     text-align: center;
     color: #737272;
 }
+
+/* gradient section */
+.gradient{
+    padding:130px 230px;
+}
+
+#grad1 {
+    background-image: url('../images/watch.png');
+    width: 1140px;
+    height: 300px;
+    left: 230px;
+    top: 2216.3px;
+
+    background: linear-gradient(90deg, #F15B22 0%, rgba(241, 91, 34, 0) 100%);
+    border-radius: 8px;
+   padding: 59px 64px;
+}
+
+.grad-title {
+    width: 459px;
+    height: 182px;
+    left: 294px;
+    top: 2275.3px;
+}
+
+.gradient-btn {
+  
+    color:#FD6E0A ;
+    font-size: 20px;
+    font-weight: 700;
+    height: 64px;
+    border: 0px;
+    padding: 18px 35px;
+    border-radius: 5px;
+    background: #FFFFFF;
+}
+/*   width: 160px;
+    height: 64px;
+    left: 294px;
+    top: 2393.3px; */
