--- a/style/style.css
+++ b/style/style.css
@@ -186,6 +186,25 @@ h3 {
     border-radius: 5px;
     background: #FFFFFF;
 }
+/* comment section */
+.comment .section-title{
+    max-width: fit-content;
+    color: #474747;
+    padding: 130px 200px;
+    background: #FFF8F3;
+    align-items: center;
+    margin: 50px 200px;
+}
+.comment.textarea{
+    
+        height: 64px;  
+}
+    .comment .input[type="text"], input[type="email"], textarea{
+        margin-bottom: 24px;
+        border: 0;
+        width: 100%;
+        padding: 18px 30px;
+    }
 
 /* footer section */
 .content {
@@ -240,6 +259,7 @@ h3 {
     padding: 21px;
     background-color: #151414;
     border: 2px;
+    border-radius: 3px;
 
 }
 form{
