--- a/style/style.css
+++ b/style/style.css
@@ -7,6 +7,8 @@
 /* banner section */
 
 .banner{
+    background-image: url('../images/banner/banner1.png');
+
     display: flex;
     align-items: center; 
 }
@@ -227,7 +229,9 @@ h3 {
     padding-bottom: 16px;
    
 }
-
+h3{
+    
+}
 .footer-title {
     font-weight: 700;
     font-size: 45px;
